--- a/front/package.json
+++ b/front/package.json
@@ -2,10 +2,11 @@
   "name": "front",
   "version": "1.0.0",
   "description": "",
-  "main": "webpack.base.js",
+  "main": "webpack/webpack.base.js",
   "scripts": {
-    "build": "webpack --config webpack.prod.js",
-    "start": "webpack serve --watch --config webpack.dev.js"
+    "build": "webpack --config ./webpack/webpack.prod.js",
+    "start": "webpack serve --watch --config ./webpack/webpack.dev.js",
+    "tsc": "tsc"
   },
   "keywords": [],
   "author": "",
@@ -17,9 +18,15 @@
     "@babel/preset-typescript": "^7.12.7",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@typescript-eslint/eslint-plugin": "^4.13.0",
+    "@typescript-eslint/parser": "^4.13.0",
     "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^3.0.0",
+    "eslint": "^7.17.0",
+    "eslint-config-prettier": "^7.1.0",
     "html-webpack-plugin": "^4.5.1",
+    "prettier": "^2.2.1",
+    "source-map-loader": "^2.0.0",
     "typescript": "^4.1.3",
     "webpack": "^5.12.1",
     "webpack-cli": "^4.3.1",
@@ -27,7 +34,9 @@
     "webpack-merge": "^5.7.3"
   },
   "dependencies": {
+    "history": "^5.0.0",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "react-router-dom": "^6.0.0-beta.0"
   }
 }
