--- a/front/tsconfig.json
+++ b/front/tsconfig.json
@@ -5,6 +5,13 @@
     "module": "es6",
     "jsx": "react",
     "noImplicitAny": true,
-    "allowSyntheticDefaultImports": true
+    "allowSyntheticDefaultImports": true,
+    "moduleResolution": "node",
+    "baseUrl": "src",
+    "paths": {
+      "common/*": ["common/*"],
+      "lk/*": ["modules/lk/*"],
+      "store/*": ["modules/store/*"]
+    },
   }
 }
