--- a/front/package.json
+++ b/front/package.json
@@ -34,6 +34,11 @@
     "webpack-merge": "^5.7.3"
   },
   "dependencies": {
+    "@date-io/date-fns": "^1.3.13",
+    "@material-ui/core": "^4.11.2",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/pickers": "^3.2.10",
+    "date-fns": "^2.17.0",
     "history": "^5.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
