--- a/front/package.json
+++ b/front/package.json
@@ -39,9 +39,11 @@
     "@material-ui/icons": "^4.11.2",
     "@material-ui/pickers": "^3.2.10",
     "date-fns": "^2.17.0",
+    "formik": "^2.2.6",
     "history": "^5.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-router-dom": "^6.0.0-beta.0"
+    "react-router-dom": "^6.0.0-beta.0",
+    "yup": "^0.32.9"
   }
 }
